add news endpoint
